Updated team members to manual on the title page

--- a/main.tex
+++ b/main.tex
@@ -34,8 +34,24 @@
 % Book metadata
 \title{Ginarn}
 \date{Version 0.0}
-\author[The Ginarn team]{The Ginarn team}
-\publisher{Geoscience Australia and CRC-SI}
+\author[The Ginarn team]{
+Sebastien Allegyer,
+Rupert Brown,
+John Donovan,
+Ken Harima,
+Aaron Hammond,
+Lavanya Kumarappan,
+Tao Li,
+Ronald Maj,
+Bogdan Matviichuk,
+Chris Morgan,
+Michael Moore,
+Simon McClusky,
+Thomas Papanikolaou,
+Vincent Rooke,
+Tzupang Tseng
+}
+\publisher{Geoscience Australia and Frontier-SI}
 
 %%
 % If they're installed, use Bergamo and Chantilly from www.fontsite.com.
